<resources>

    <string name="app_name" translatable="false">Targmly</string>
    <string name="speachText">hello</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">ConfirmPassword</string>
    <string name="select">Select Item</string>
    <string name="word">Word:</string>
    <string name="trans">Translation:</string>
    <string name="Generallanguage">General Language</string>
    <string name="darkmode">Dark Mode</string>
    <string name="okay">OK</string>
    <string name="string_arabic">Arabic</string>
    <string name="English">English</string>
    <string name="signlanguage">Sign Language</string>
    <string name="account">Account</string>
    <string name="logout">Log Out</string>
    <string name="history">History</string>
    <string name="cleardata">Clear Data</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="textview">TextView</string>
    <string name="userdatials">User Details</string>
    <string name="Name">Name</string>
    <string name="Email">E_mail</string>
    <string name="Add">Add</string>
    <string name="Clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>


</resources>