<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/Back_btn"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:baselineAligned="false"
        android:text="@string/userdatials"
        android:textSize="44sp"
        app:textAllCaps="false"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/Name"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:baselineAligned="false"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/Email"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:baselineAligned="false"
        android:gravity="center" />


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="17dp"
        android:baselineAligned="false"
        android:text="@string/logout" />


</LinearLayout>
